--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -69,9 +69,9 @@ I charge one of the following fee models:
 
 Yes. You can.
 
-a) If you opt for flat fee model, the nature of advisory will be "unstructured" and involve wide-ranging queries but nothing specific.
+a) If you opt for flat fee model, the nature of advisory will be "unstructured" and nothing specific. This is ideal if you don't have a sizeable asset base and/or want different points of view on an ongoing basis.
 
-b) If you opt for AuA model, the nature of advisory will be "structured", specific, and holistic. You will have to disclose an audited networth statement which will help me assess your financial wellbeing. Once assessed, I will prepare a comprehensive financial plan fine-tuned to your goals and aspirations. There will also be granular asset allocation and rebalancing, detailed investment policy statement, scenario planning, tax planning, behavioural coaching, and so on. There are a whole range of tools and approaches which I will deploy to help you become more aware of your financial aspirations which will also increase your confidence.
+b) If you opt for AuA model, the nature of advisory will be "structured", comprehensive, and holistic. This is ideal if you have sizeable wealth and require specific solutions and a wide range of options, that also includes financial planning, granular asset allocation, estate planning, and investment ideas.
 
 Regardless of the fee type, it will require committment from both you and me.
 
@@ -85,11 +85,11 @@ They SELL financial products for "free", hence, they do not charge you directly.
 
 **Are your fees negotiable?**
 
-No. Typically, the fee is what you would pay to a skilled professional for specialised & holistic service. Investment/financial advisory is not a commodity product, it requires great skill & focus; it is a profession that requires a lot of time & patience. It is also a highly regulated profession in the same vein as medicine, law, or auditing, which ensures that there is a high degree of compliance and quality service. Besides, I choose to spend a valuable chunk of my time with clients who are willing to leverage my skill for their benefit. Besides, have you ever negotiated with a neurosurgeon?
+No.
 
 **What does the advisory process look like?**
 
-Good question! A lot of clients do not know what it looks like and it's important to know. Each client will require a different process & approach that's unique to their situation. It's akin to a doctor examining a patient to determine the appropriate procedure. Some clients will require more technical approach (that involves number crunching) while some will be more tactical/strategic. However, the overall process involves deep conversations about client's relationship with money, life goals & aspirations, and what issues client hopes to solve. However, goals & aspirations will keep changing every year (even as economic & market conditions keep changing), which is why it is recommended to keep advisors for the long term so that clients can recaliberate their goals and strategy.
+Good question! A lot of clients do not know what it looks like and it's important to know. Each client will require a different process & approach that's unique to their situation and problem set. It's akin to a doctor examining a patient to determine the appropriate procedure. Some clients will require more tactical/technical approach with number crunching while some will be more strategic. However, the overall process involves deep conversations about client's relationship with money, life goals & aspirations, and what issues client hopes to solve. However, goals & aspirations will keep changing every year (even as economic & market conditions keep changing), which is why it is recommended to keep advisors for the long term so that clients can recaliberate their goals and strategy.
 
 **Is there a minimum threshold required to be your client?**
 
