--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -61,9 +61,13 @@ No. Like I said earlier, I do not sell products. I’m in the fiduciary business
 
 I charge one of the following fee models:
 
-1) Simple no-nonsense flat fee. The amount depends on the complexity of the client's requirements. Higher complexity means higher the fees and vice versa.
+1) Simple no-nonsense flat fee of INR 1,25,000 per annum.
 
 2) Maximum of 1% of Asset under Advisory (AuA). The minimum threshold is INR 1,25,00,000.
+
+**Oof! That's a lot!**
+
+Yes. It is. The thing is -- I deliver. Always. Most of my advisory is something you don't like to hear, and that's precisesly the point. A top class surgeon/oncologist will tell you if you have cancer. The oncologist will tell you that you need a surgery or chemotherapy, or whatever. The oncologist won't tell you that you will live. I function the same way. And it cost money. If you're finances are in messy shape, I shall say so. I'm not the kind of advisor who will say "all will be well". My job is to fix your finances, to give you the best possible advice for you to generate wealth. Period. I call a spade a spade. If you think it's a lot, you're welcome to go someone else, a lower skiled oncologist, perhaps? Otherwise, there's Google. It's all there! You can even Google "How to cure cancer"! Seriously, use Google.
 
 **Can I choose which fee model to opt for? And can you tell me what is offered under each?**
 
