--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -271,6 +271,13 @@ Client’s queries / complaints may arise due to lack of understanding or a defi
 
 ---
 
+Disclosure with respect to compliance with Annual compliance audit requirement under Regulation 19(3) of SECURITIES AND EXCHANGE BOARD OF INDIA (INVESTMENT ADVISERS) REGULATIONS, 2013 for last and current financial year are as under :
+
+|S No.|Financial Year|Compliance Audit Status|Remarks, If any|
+|1|FY 2020-21|Conducted|NIL|
+
+---
+
 **SEBI Regional Office**
 
 SEBI (Southern Regional Office)
@@ -297,7 +304,7 @@ I, Aditya G, am a Securities and Exchange Board of India (SEBI) registered indep
 
 **Disclaimer for Website**
 
-The purpose of this website is to provide information only and the contents of this website do not constitute financial advice. 
+The purpose of this website is to provide information only and the contents of this website do not constitute financial advice.
 
 The Investment Adviser will endeavour to update the website on a regular basis. However, information can change without notice and does not guarantee the accuracy of information on the website, including information provided by third parties, at any particular time.
 
@@ -305,6 +312,6 @@ The information is selective and may not be complete or accurate for your partic
 
 The Investment Adviser does not give any warranty as to the accuracy, reliability or completeness of information which is contained in this website. Except insofar as any liability under statute cannot be excluded, the Investment Adviser does not accept any liability for any error or omission of any information on this website or for any resulting loss or damage suffered by the recipient or any other person.
 
-For your convenience, this website may contain hyperlinks to websites and servers maintained by third parties. The Investment Adviser does not control, evaluate, endorse or guarantee content found in those sites. Similarly, the Investment Adviser does not assume any responsibility or liability for the actions, products, services and content of these sites or the parties that operate them. 
+For your convenience, this website may contain hyperlinks to websites and servers maintained by third parties. The Investment Adviser does not control, evaluate, endorse or guarantee content found in those sites. Similarly, the Investment Adviser does not assume any responsibility or liability for the actions, products, services and content of these sites or the parties that operate them.
 
 Your use of such sites is entirely at your own risk.
