--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -67,7 +67,7 @@ I charge one of the following fee models:
 
 **Oof! That's a lot!**
 
-Yes. It is. The thing is -- I deliver. Always. Most of my advisory is something you don't like to hear, and that's precisesly the point. A top class surgeon/oncologist will tell you if you have cancer. The oncologist will tell you that you need a surgery or chemotherapy, or whatever. The oncologist won't tell you that you will live. I function the same way. And it cost money. If you're finances are in messy shape, I shall say so. I'm not the kind of advisor who will say "all will be well". My job is to fix your finances, to give you the best possible advice for you to generate wealth. Period. I call a spade a spade. If you think it's a lot, you're welcome to go someone else, a lower skiled oncologist, perhaps? Otherwise, there's Google. It's all there! You can even Google "How to cure cancer"! Seriously, use Google.
+Yes. It is. Much of my advisory consists of uncomfortable truths, and that's precisesly how I dispense my advice. A world class surgeon/oncologist will never sugarcoat the truth. They will tell you precisely what is required. I function the same way. And it cost a lot of money. If you're finances are in a mess, I shall say so. After all, my job is to assess & fix not only your finances but also your approach money management. At the end of the day, the value of advisory is what makes the fees worth it.
 
 **Can I choose which fee model to opt for? And can you tell me what is offered under each?**
 
@@ -77,7 +77,9 @@ a) If you opt for flat fee model, the nature of advisory will be "unstructured" 
 
 b) If you opt for AuA model, the nature of advisory will be "structured", comprehensive, and holistic. This is ideal if you have sizeable wealth and require specific solutions and a wide range of options, that also includes financial planning, granular asset allocation, estate planning, and investment ideas.
 
-Regardless of the fee type, it will require committment from both you and me.
+**Are your fees negotiable?**
+
+No.
 
 **I have met "advisors" who do not charge a fee. Can you tell me more about this?**
 
@@ -86,10 +88,6 @@ It is likely you're referring to "distributors" such as bank relationship manage
 **So, who are distributors?**
 
 They SELL financial products for "free", hence, they do not charge you directly. Instead, they earn COMMISSIONS on the products they sell from product orginators (i.e. mutual funds, PMS, AIFs, etc), instead of you. In other words, you are actually paying distributors vis-a-vis product originator, not directly to them! Distributors are NOT fiducaries, they are SALES people. Remember, there is no such thing as free lunch!
-
-**Are your fees negotiable?**
-
-No.
 
 **What does the advisory process look like?**
 
