--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -274,6 +274,7 @@ Disclosure with respect to compliance with Annual compliance audit requirement u
 |S No.|Financial Year|Compliance Audit Status|Remarks, If any|
 |:---:|:---:|:---:|:---:|
 |1|FY 2020-21|Conducted|NIL|
+|2|FY 2021-22|Conducted|NIL|
 
 ---
 
