--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -153,7 +153,7 @@ Please do send me an email, which is mentioned at the top of this web page. Intr
 
 ###  Compliance Information (as required by the statute)
 
-#### Number of Complaints (as on 31st December 2021)
+#### Number of Complaints (as on 31st August 2022)
 [Compliance Requirement As per SEBI circular [SEBI/HO/IMD/DF1/CIR/P/2019/169](https://www.sebi.gov.in/legal/circulars/dec-2019/measures-to-strengthen-the-conduct-of-investment-advisers-ia-_45490.html) dated December 27, 2019]
 
 |At the beginning of the month|	Received during the month|Resolved during the month|Pending at the end of the month|Reasons for pendency|
@@ -227,7 +227,7 @@ Mission: Every investor should be able to invest in right investment products ba
 
 **Annexure B**
 
-<i>Month Ending: December 2021</i>
+<i>Month Ending: August 2022</i>
 
 |Received From|Pending at end of last month|Received|Resolved|Total Pending|Pending > 3 months|Average Resolution time (days)|
 |:---:|:---:|:---:|:---:|:---:|:---:|:---:|
@@ -236,18 +236,15 @@ Mission: Every investor should be able to invest in right investment products ba
 |Other Sources|0|0|0|0|NA|NA|
 |Grand Total|0|0|0|0|NA|NA|
 
-<i>Trend of monthly disposal of Complaints</i>
+<i>Trend of monthly disposal of Complaints (last 6 months)</i>
 |Month|Carried Forward from previous month|Received|Cummulative|Total Pending|
 |:---:|:---:|:---:|:---:|:---:|
-|April 2021|0|0|0|0|
-|May 2021|0|0|0|0|
-|June 2021|0|0|0|0|
-|July 2021|0|0|0|0|
-|August 2021|0|0|0|0|
-|September 2021|0|0|0|0|
-|October 2021|0|0|0|0|
-|November 2021|0|0|0|0|
-|December 2021|0|0|0|0|
+|August 2022|0|0|0|0|
+|July 2022|0|0|0|0|
+|June 2022|0|0|0|0|
+|May 2022|0|0|0|0|
+|April 2022|0|0|0|0|
+|March 2022|0|0|0|0|
 
 <i>Trend of annual disposal of complaints</i>
 |Year|Carried Forward from previous year|Received|Cummulative|Total Pending|
@@ -255,6 +252,7 @@ Mission: Every investor should be able to invest in right investment products ba
 |FY 2018-19|0|0|0|0|
 |FY 2019-20|0|0|0|0|
 |FY 2020-21|0|0|0|0|
+|FY 2021-22|0|0|0|0|
 
 ---
 
