--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -51,39 +51,23 @@ No. That would be violation of SEBI regulations. I do not earn commissions on pr
 
 **What kind of advisory services do you offer?**
 
-I offer comprehensive financial planning and general financial advisory. The former is specific and targeted financial advice tailored specific to your needs. The latter is broad and covers the usual gamut of investment advisory.
+I offer tailormade, bespoke advisory only to "accredited investors".
 
-**Do you participate in any sales contests or award programs creating incentives to favour particular vendors?**
+**Who are accredited investors?** 
 
-No. Like I said earlier, I do not sell products. I’m in the fiduciary business.
+Basically, very very very very very very rich people. There are a set of conditions that needs to be satisfied to qualify as an accredited investor. You need to have an annual income of at least INR 2 crore or networth of more than INR 7.5 crore, out of which more than INR 3.75 crore are in financial assets. Yes, I know. It's rather complicated without any basis or rationale, but the world is usually run by funny people.
 
 **How much do you charge for your services?**
 
-I charge one of the following fee models:
-
-1) Simple no-nonsense flat fee of INR 1,25,000 per annum.
-
-2) Maximum of 1% of Asset under Advisory (AuA). The minimum threshold is INR 1,25,00,000.
-
-**Oof! That's a lot!**
-
-Yes. It is. Much of my advisory consists of uncomfortable truths, and that's precisesly how I dispense my advice. A world class surgeon/oncologist will never sugarcoat the truth. They will tell you precisely what is required. I function the same way. And it cost a lot of money. If you're finances are in a mess, I shall say so. After all, my job is to assess & fix not only your finances but also your approach money management. At the end of the day, the value of advisory is what makes the fees worth it.
-
-**Can I choose which fee model to opt for? And can you tell me what is offered under each?**
-
-Yes. You can.
-
-a) If you opt for flat fee model, the nature of advisory will be "unstructured" and nothing specific. This is ideal if you don't have a sizeable asset base and/or want different points of view on an ongoing basis.
-
-b) If you opt for AuA model, the nature of advisory will be "structured", comprehensive, and holistic. This is ideal if you have sizeable wealth and require specific solutions and a wide range of options, that also includes financial planning, granular asset allocation, estate planning, and investment ideas.
+I charge a custom fee depending on how complex my advisory is. It ranges from flat-fee to a percentage of Assets under Advisory (AuA). I prefer it to be simple though so I don't have to open Microsoft Excel. 
 
 **Are your fees negotiable?**
 
-No.
+No.  
 
 **I have met "advisors" who do not charge a fee. Can you tell me more about this?**
 
-It is likely you're referring to "distributors" such as bank relationship managers, mutual fund distributors, stock brokers (yes, they are "distributors" as well) etc. They often call themselves "advisors", which is a clever use of semantics, and one that is extremely misleading and dangerous! In fact, SEBI recently barred product distributors from calling themselves "advisors" or IFAs or RIAs or similar nomenclatures.
+It is likely you're referring to "distributors" such as bank relationship managers, mutual fund distributors, online platforms, stock brokers (yes, they are "distributors" as well) etc. They often call themselves "advisors", which is a clever use of semantics, and one that is extremely misleading and dangerous! In fact, SEBI recently barred product distributors from calling themselves "advisors" or IFAs or RIAs or similar nomenclatures.
 
 **So, who are distributors?**
 
@@ -103,7 +87,7 @@ Of course. Every advisor, regardless of business model or form of compensation, 
 
 **Do you earn fees as adviser to a private fund or other investments that you may recommend to clients?**
 
-I do not serve as an adviser to any third party product originator. I could recommend such products based on the client’s profile and check if the it is suitable to the client’s temperament and investment goals. However, I do not sell products or earn any commissions from any product originator. You will have to buy from a financial distributor or buy directly from the product originator.
+I do not serve as an adviser to any third party product originator. I could recommend such products based on the client’s profile and check if the it is suitable to the client’s temperament and investment goals. However, I do not sell products or earn any commissions from any product originator. You will have to buy from a financial distributor or buy directly from the product originator. Remember, I'm a fiduciary!
 
 **Do you pay referral fees to generate new clients?**
 
@@ -111,11 +95,11 @@ No. I have good relationships with many advisors, distributors, lawyers, charter
 
 **Do you earn fees for referring clients to specialists like estate attorneys or insurance agents?**
 
-As a fiduciary, if there is something that demands a greater attention to detail, which often would require a second opinion, particularly in specialised areas of law, property, or taxation, I will refer clients to a third party, say a specialised lawyer or advocate or chartered accountant, whom I feel will add value to the advisory and client. There could be a collaboration of sorts to help the client. However, nothing is exchanged between third parties and me. Remember, I'm a fiduciary!
+As a fiduciary, if there is something that demands a greater attention to detail, which often would require a second opinion, particularly in specialised areas of law, property, or taxation, I will refer clients to a third party, say a specialised lawyer, advocate, or chartered accountant, whom I feel will add value to the advisory and client. There could be a collaboration of sorts to help the client. However, nothing is exchanged between third parties and me. Remember, I'm a fiduciary!
 
 **What is your investment philosophy?**
 
-Each person’s investment philosophy is distinct and will depend on his/her personality, personal beliefs, and temperament. Mine is very simple – I personally believe that less is more; I believe in holding a concentrated portfolio of assets for long periods of time, which I believe can deliver exemplary returns; I believe one should rebalance their portfolios periodically in order to attune to the prevailing market and keep investment goals aligned; This being said, I also strongly believe in having an open mind to be receptive to different investment approaches, given the constant evolution the global economy, investment profession, and markets. Thus, it is essential to combine different approaches for your benefit. This is one of the hardest parts of investment advisory, and one that I enjoy the most.
+Each person’s investment philosophy is distinct and will depend on his/her personality, personal beliefs, and temperament. Mine is very simple – I personally believe that less is more; I believe in holding a concentrated portfolio of assets for long periods of time (which is riskier!), which I believe can deliver exemplary returns; I believe one should rebalance their portfolios periodically in order to attune to the prevailing market and keep investment goals aligned; This being said, I also strongly believe in having an open mind to be receptive to different investment approaches, given the constant evolution the global economy, investment profession, and markets. Thus, it is essential to combine different approaches for your benefit. This is one of the hardest parts of investment advisory, and one that I enjoy the most.
 
 **Do you believe in technical analysis or market timing?**
 
