--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -59,7 +59,7 @@ Basically, very very very very very very rich people. There are a set of conditi
 
 **How much do you charge for your services?**
 
-I charge a custom fee depending on how complex my advisory is. It ranges from flat-fee to a percentage of Assets under Advisory (AuA). I prefer it to be simple though so I don't have to open Microsoft Excel. 
+I charge a custom fee depending on how complex the client requirements are. It ranges from flat-fee to a percentage of Assets under Advisory (AuA). I prefer it to be simple though so I don't have to open Microsoft Excel. 
 
 **Are your fees negotiable?**
 
