--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -25,7 +25,7 @@ I'm a <i>fiduciary</i> and I help clients manage finances, investments, asset al
 
 ## Schedule an appointment ##
 
-Mail me at <b>INFO <i>[at]</i> PANTHERACAPITAL <i>[dot]</i> IN</b>
+Mail me at <b>aditya DOT invest[at]</i> OUTLOOK <i>[dot]</i> COM</b>
 
 ---
 
@@ -137,7 +137,7 @@ Please do send me an email, which is mentioned at the top of this web page. Intr
 
 ###  Compliance Information (as required by the statute)
 
-#### Number of Complaints (as on 31st August 2022)
+#### Number of Complaints (as on 31 March 2023)
 [Compliance Requirement As per SEBI circular [SEBI/HO/IMD/DF1/CIR/P/2019/169](https://www.sebi.gov.in/legal/circulars/dec-2019/measures-to-strengthen-the-conduct-of-investment-advisers-ia-_45490.html) dated December 27, 2019]
 
 |At the beginning of the month|	Received during the month|Resolved during the month|Pending at the end of the month|Reasons for pendency|
@@ -211,7 +211,7 @@ Mission: Every investor should be able to invest in right investment products ba
 
 **Annexure B**
 
-<i>Month Ending: August 2022</i>
+<i>Month Ending: March 2023</i>
 
 |Received From|Pending at end of last month|Received|Resolved|Total Pending|Pending > 3 months|Average Resolution time (days)|
 |:---:|:---:|:---:|:---:|:---:|:---:|:---:|
@@ -257,6 +257,7 @@ Disclosure with respect to compliance with Annual compliance audit requirement u
 |:---:|:---:|:---:|:---:|
 |1|FY 2020-21|Conducted|NIL|
 |2|FY 2021-22|Conducted|NIL|
+|3|FY 2022-23|Ongoing|NA|
 
 ---
 
