--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -25,7 +25,7 @@ I'm a <i>fiduciary</i> and I help clients manage finances, investments, asset al
 
 ## Schedule an appointment ##
 
-Mail me at <b>aditya DOT invest[at]</i> OUTLOOK <i>[dot]</i> COM</b>
+Mail me at <b>ADITYA [dot] INVEST[at]</i> OUTLOOK <i>[dot]</i> COM</b>
 
 ---
 
@@ -244,9 +244,9 @@ Mission: Every investor should be able to invest in right investment products ba
 
 Client’s queries / complaints may arise due to lack of understanding or a deficiency of service experienced by clients. Deficiency of service may include lack of explanation, clarifications, understanding which escalates into shortfalls in the expected delivery standards, either due to inadequacy of facilities available or through the attitude of staff towards client.
 
-1.	Clients can seek clarification to their query and are further entitled to make a complaint in writing, orally or telephonically. An email may be sent to me at <b>INFO <i>[at]</i> PANTHERACAPITAL <i>[dot]</i> IN</b>.
+1.	Clients can seek clarification to their query and are further entitled to make a complaint in writing, orally or telephonically. An email may be sent to me at <b>ADITYA [dot] INVEST[at]</i> OUTLOOK <i>[dot]</i> COM</b>.
 2.	A letter may also be written with their query/complaint and posted at address mentioned in the Agreement Documentation given at time of client onboarding.
-3.	Clients can write to the Investment Adviser at <b>INFO <i>[at]</i> PANTHERACAPITAL <i>[dot]</i> IN</b>, if the Investor does not receive a response within 10 business days of writing to the Client Servicing Team. The client can expect a reply within 10 business days of approaching the Investment Advisor.
+3.	Clients can write to the Investment Adviser at <b>ADITYA [dot] INVEST[at]</i> OUTLOOK <i>[dot]</i> COM</b>, if the Investor does not receive a response within 10 business days of writing to the Client Servicing Team. The client can expect a reply within 10 business days of approaching the Investment Advisor.
 4.	In case you are not satisfied with our response you can lodge your grievance with SEBI at [SCORES](http://scores.gov.in) or you may also write to any of the offices of SEBI. SCORES may be accessed thorough SCORES mobile application as well, same can be downloaded from below [link](https://play.google.com/store/apps/details?id=com.ionicframework.sebi236330)
 
 ---
@@ -276,6 +276,7 @@ Fax: sebisro@sebi.gov.in
 
 **Principal Officer: Aditya G**
 SEBI REG No: INA200011736
+<b>ADITYA [dot] INVEST[at]</i> OUTLOOK <i>[dot]</i> COM</b>
 
 ---
 
