--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -5,6 +5,8 @@
 
 #### SEBI Reg No: INA200011736
 
+#### BASL No: 1142
+
 ---
 
 #### What is the meaning of *fiduciary*?
@@ -287,6 +289,10 @@ I, Aditya G, am a Securities and Exchange Board of India (SEBI) registered indep
 ---
 
 **Disclaimer for Website**
+
+Investment in securities market are subject to market risks. Read all the related documents carefully before investing.
+
+Registration granted by SEBI, membership of BASL (in case of IAs) and certification from NISM in no way guarantee performance of the intermediary or provide any assurance of returns to investors
 
 The purpose of this website is to provide information only and the contents of this website do not constitute financial advice.
 
