--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -117,7 +117,7 @@ Quite regularly. I trade for my own sanity and happiness. It keeps my grey cells
 
 **Which professional credentials do you have, and what are their requirements?**
 
-I have a Certified Financial Planner (CFP) designation, which is the gold standard for wealth management and financial planning, and one of the requirements of being a SEBI-registered Financial Adviser. Thus, there are strict compliance requirements with regards to both CFP designation as well as statutory rules prescribed by SEBI. I have also done my MBA with specialisation in finance & economics, and have completed several wealth management courses from institutes in New York. You can check my [LinkedIn profile](https://www.linkedin.com/in/adityago/) for more details.
+I have a Certified Financial Planner (CFP) designation, which is the gold standard for wealth management and financial planning, and one of the requirements of being a SEBI-registered Financial Adviser. Thus, there are strict compliance requirements with regards to both CFP designation as well as statutory rules prescribed by SEBI. I have also done my MBA with specialisation in finance & economics, and have completed several wealth management courses from institutes in New York. You can check my [LinkedIn profile](https://www.linkedin.com/in/adityagovindaraj/) for more details.
 
 **After inflation, taxes and fees, what is a reasonable estimated return on my portfolio over the long term?**
 
