--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -260,7 +260,7 @@ Disclosure with respect to compliance with Annual compliance audit requirement u
 |:---:|:---:|:---:|:---:|
 |1|FY 2020-21|Conducted|NIL|
 |2|FY 2021-22|Conducted|NIL|
-|3|FY 2022-23|Ongoing|NA|
+|3|FY 2022-23|Conducted|NIL|
 
 ---
 
