--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -7,6 +7,6 @@
   ></script>
 </head>
 <body>
-  <zero-md src="/fiduciary.md"></zero-md>
+  <zero-md src="/advisory/fiduciary.md"></zero-md>
 </body>
 </html>
